# knowledge-bank

./: .gitignore  AGENT_HARNESS_PLAN.md  CLAUDE.md  CLEAN_READ_PLAN.md  CONFIG.md  COUNSEL_FORK_PLAN.md  Cargo.toml  KB_PERSISTENCE_ADDENDUM.md  KB_PROD_REQUIREMENTS.md  LOCAL_UI_PRD.md  NEW_SWIFT_FEATURES.md  NOTARIZATION_PLAN.md  README.md  skill.md
.claude/skills/analyze-paper/: SKILL.md
.claude/skills/clean-paper/: SKILL.md
.claude/skills/implement-paper/: SKILL.md
.claude/skills/visual-abstract/: SKILL.md
.claude/skills/write-paper-book/: SKILL.md
docs/: index.html
macos/: Info.plist  build.sh  make-launcher.sh  run.sh
macos/Sources/API/: KBClient.swift  Models.swift
macos/Sources/App/: KBApp.swift  RootView.swift  SidebarView.swift
macos/Sources/Design/: Theme.swift
macos/Sources/Features/Add/: AddView.swift
macos/Sources/Server/: Keychain.swift  ServerController.swift
macos/Sources/Speech/: SpeechController.swift  SpeechMiniPlayer.swift
macos/Tools/: kb-ocr.swift
scripts/: smoke.sh
src/: anthropic.rs  chat.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  reader.rs
src/agents/: mod.rs  roundtable.rs
src/agents/harness/: kb_tools.rs  mod.rs
src/cortex/: mod.rs
src/embed/: mod.rs  openai.rs
src/index/: meta_db.rs  mod.rs  turbovec_index.rs
src/ingest/: arxiv.rs  html.rs  latex.rs  mod.rs  ocr.rs  pdf.rs  pipeline.rs  sections.rs
src/search/: graph_rank.rs  mod.rs  retrieval.rs
src/server/: http.rs  mcp.rs  mod.rs  webui.html
src/watch/: mod.rs
src/watcher/: fs_watcher.rs  mod.rs
tests/: cli.rs  persistence.rs
(+38 files in other folders)
