[package]
name = "kb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
flate2 = "1.1.9"
hex = "0.4.3"
indicatif = "0.18.4"
lopdf = "0.41.0"
notify = "8.2.0"
open = "5.3.5"
pdf-extract = "0.10.0"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "gzip", "http2", "charset"] }
roxmltree = "0.21.1"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tar = "0.4.46"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "process", "fs", "signal", "time", "io-std", "io-util"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
turbovec = "0.9.0"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
